# anagrams

./: .gitignore  Anagram.hs  BACKLOG  Main.hs  README  TreeFun.hs  TrieBuilder.hs  anagram.cabal  cabal.sandbox.config  stack.yaml
src/: Anagram.hs  Main.hs  Test.hs  TrieBuilder.hs
test/: Test.hs
