name:                  anagram
version:               0.1.3
license:               GPL-3
license-file:          LICENSE
author:                Frederik Hanghøj Iversen
maintainer:            fhi.1990@gmail.com
build-type:            Simple
cabal-version:         >=1.10

executable anagram
  main-is:             Main.hs
  build-depends:       base == 4.9.*,
                       containers == 0.5.*,
                       optparse-applicative == 0.12.*,
                       text == 1.2.*,
                       -- TODO: Move this dep to test.
                       QuickCheck == 2.8.*,
                       deepseq == 1.4.*,
                       random == 1.1.*,
                       array == 0.5.*,
                       -- TODO: Move this dep to test.
                       HUnit == 1.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Anagram, TrieBuilder

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  build-depends:       base,
                       containers,
                       QuickCheck == 2.8.*,
                       HUnit == 1.3.*
  other-modules:       Anagram, TrieBuilder
  hs-source-dirs:      src, test
  default-language:    Haskell2010
